--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,9 @@ dependencies {
     def lifecycle_version = "2.4.0"
     def arch_version = "2.1.0"
 
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.fragment:fragment:1.4.0'
     testImplementation 'junit:junit:4.+'
@@ -51,6 +51,7 @@ dependencies {
     implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation group: 'log4j', name: 'log4j', version: '1.2.16'
 }
 repositories {
     mavenCentral()
