--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,24 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    configurations {
+        implementation.exclude module:'protobuf-java'
+    }
 }
 
 dependencies {
 
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation 'com.google.firebase:firebase-firestore:24.0.1'
+    implementation platform('com.google.firebase:firebase-bom:29.0.4')
+
+    implementation 'com.google.firebase:firebase-analytics'
+
+
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+
     def lifecycle_version = "2.4.0"
+    def nav_version = "2.4.0"
     def arch_version = "2.1.0"
 
     implementation 'androidx.core:core:1.7.0'
@@ -52,8 +63,10 @@ dependencies {
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
     implementation group: 'log4j', name: 'log4j', version: '1.2.16'
