--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
     implementation group: 'log4j', name: 'log4j', version: '1.2.16'
+
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
 repositories {
+    maven {
+        url 'http://dl.bintray.com/amulyakhare/maven'
+    }
     mavenCentral()
 }
