--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     configurations {
@@ -56,6 +57,8 @@ dependencies {
     def lifecycle_version = "2.4.0"
     def nav_version = "2.4.1"
     def arch_version = "2.1.0"
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     implementation 'androidx.core:core:1.7.0'
     implementation 'com.google.android.material:material:1.5.0'
