--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.fragment:fragment:1.4.1'
-    testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.core:core-ktx:1.7.0"
@@ -91,6 +90,9 @@ dependencies {
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
+
 repositories {
     maven {
         url 'http://dl.bintray.com/amulyakhare/maven'
