--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Touch local.properties
+        run: touch local.properties
+      - name: Add Api Key
+        run: echo "apiKey=\"\"" >> local.properties
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
