--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,11 +80,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.core:core-ktx:1.7.0"
+    implementation 'com.borjabravo:simpleratingbar:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
@@ -101,8 +103,9 @@ apply plugin: "androidx.navigation.safeargs"
 repositories {
     maven {
         url 'http://dl.bintray.com/amulyakhare/maven'
-    }
+        }
     google()
     jcenter()
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
